devops/traefik/https-backend-transport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-https
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-https
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 443
      targetPort: 443
